--- a/Copy_of_Copy_of_week2_multiTask_Bandit_final.ipynb
+++ b/Copy_of_Copy_of_week2_multiTask_Bandit_final.ipynb
@@ -41,12 +41,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "3aeb2bd8-37fc-42f5-bc25-9c1eeb305d23",
       "metadata": {
-        "id": "3aeb2bd8-37fc-42f5-bc25-9c1eeb305d23"
+        "id": "3aeb2bd8-37fc-42f5-bc25-9c1eeb305d23",
+        "outputId": "9380d389-aa39-4171-fc87-5f9aa7ea4fd9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 275
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Image object>"
+            ],
+            "text/html": [
+              "<img src=\"https://miro.medium.com/max/3688/1*rrIJOpJO8fkFECNHlwq-jQ.png\" width=\"500\" class=\"unconfined\"/>"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "from IPython.core.display import Image, display\n",
         "display(Image(url='https://miro.medium.com/max/3688/1*rrIJOpJO8fkFECNHlwq-jQ.png', width=500, unconfined=True))"
@@ -3316,7 +3334,10 @@
         "id": "17e196e7-d1ad-4887-8d76-66213f9fdffc"
       },
       "source": [
-        "![Screenshot 2022-07-20 at 08.20.01.png](attachment:00f73cf5-c0ce-46fa-9828-24b858b47ee6.png)"
+        "<!-- ![Screenshot 2022-07-20 at 08.20.01.png](attachment:00f73cf5-c0ce-46fa-9828-24b858b47ee6.png) -->\n",
+        "\n",
+        "> Indented block\n",
+        "\n"
       ]
     },
     {
